deploy: d33fc7d61457b654f494260f9467a37149b2dda8

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -38,6 +38,8 @@
 <a href="group__Backend.html#gac72f4c26d526549e07068cb6860456ff"/>
 <a href="group__Backend.html#gadae92a05d0a5cd35436746f036a5e62d"/>
 <a href="group__Data.html"/>
+<a href="group__Data.html#ga18dab575bd8b6b0b136bc2bfe372779e"/>
+<a href="group__Data.html#ga901f87c8c02f34ace292608c2b971521"/>
 <a href="group__Enums.html"/>
 <a href="group__Operations.html"/>
 <a href="group__Operations.html#ga1349640be24b23301f82338a4e89202e"/>
@@ -46,6 +48,7 @@
 <a href="group__Operations.html#ga29dbbd00763b8b3c3f7fa9f585e68462"/>
 <a href="group__Operations.html#ga35ecd085b423e6312a5214b1d0573e4c"/>
 <a href="group__Operations.html#ga39a3a5f00b93263321de0080a9bfb639"/>
+<a href="group__Operations.html#ga3be3e7ccc072baba02de2b7d16807b3e"/>
 <a href="group__Operations.html#ga5d911d76540aafe51bab744a6603dd3e"/>
 <a href="group__Operations.html#ga61bc40b52adf3c423d850587f0d368ba"/>
 <a href="group__Operations.html#ga90bcadb6a7d4367934b65c6eaadb6536"/>
