deploy: 6ed0caa31d6346d9451fe4d2722820f068dc20f7

--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -27,15 +27,21 @@
 <a href="group__Backend.html#ga2b30e11f9b8cad3955a9c726b37e0051"/>
 <a href="group__Backend.html#ga2c267928a1d92371f3f68ad74f3cec57"/>
 <a href="group__Backend.html#ga3d2ffef827171fd251881a6aefc9ae43"/>
+<a href="group__Backend.html#ga4d809f403667acfe4fcb67cd614fab35"/>
 <a href="group__Backend.html#ga5057725a9fb659eb9de22ae127c4d3d6"/>
 <a href="group__Backend.html#ga596013ea8ed4fcd564cb86ee4f1c7748"/>
 <a href="group__Backend.html#ga68c97eb394db2c962ec2a9c9006deeec"/>
 <a href="group__Backend.html#ga6bb458c307aee12bcf5607b40c61f87d"/>
 <a href="group__Backend.html#ga86c1bf4db87d280aceb033920aaca69b"/>
+<a href="group__Backend.html#ga883fc46b212f25ae93614fa2a5867a8f"/>
 <a href="group__Backend.html#gab0668b3e72a22747e2f3a03d7754f68e"/>
+<a href="group__Backend.html#gab81114438be31afbb4aee572115237f2"/>
 <a href="group__Backend.html#gac0bc9a3bcaaae45ae1efc7153d695390"/>
+<a href="group__Backend.html#gac5e60abecb830370a1981c4137ed2571"/>
+<a href="group__Backend.html#gac5f9828b9bc606c3ebff9e7abee9c1e0"/>
 <a href="group__Backend.html#gac657c94a2e58f07e6f2bd54a7af81717"/>
 <a href="group__Backend.html#gac72f4c26d526549e07068cb6860456ff"/>
+<a href="group__Backend.html#gada9054f356e1232a75287a0ac9ae143e"/>
 <a href="group__Backend.html#gadae92a05d0a5cd35436746f036a5e62d"/>
 <a href="group__Data.html"/>
 <a href="group__Data.html#ga174e0286b0f894339f85db3690433411"/>
@@ -91,8 +97,6 @@
 <a href="structPtpDeviceEntry.html"/>
 <a href="structPtpDeviceInfo-members.html"/>
 <a href="structPtpDeviceInfo.html"/>
-<a href="structPtpEOSObject-members.html"/>
-<a href="structPtpEOSObject.html"/>
 <a href="structPtpEOSViewFinderData-members.html"/>
 <a href="structPtpEOSViewFinderData.html"/>
 <a href="structPtpEnum-members.html"/>
