--- a/doxygen_crawl.html
+++ b/doxygen_crawl.html
@@ -28,9 +28,9 @@
 <a href="group__Backend.html#ga2c267928a1d92371f3f68ad74f3cec57"/>
 <a href="group__Backend.html#ga3d2ffef827171fd251881a6aefc9ae43"/>
 <a href="group__Backend.html#ga4d809f403667acfe4fcb67cd614fab35"/>
+<a href="group__Backend.html#ga4f9e8b48aea3b966c7ca3bd7cd789802"/>
 <a href="group__Backend.html#ga5057725a9fb659eb9de22ae127c4d3d6"/>
 <a href="group__Backend.html#ga596013ea8ed4fcd564cb86ee4f1c7748"/>
-<a href="group__Backend.html#ga68c97eb394db2c962ec2a9c9006deeec"/>
 <a href="group__Backend.html#ga6bb458c307aee12bcf5607b40c61f87d"/>
 <a href="group__Backend.html#ga86c1bf4db87d280aceb033920aaca69b"/>
 <a href="group__Backend.html#ga883fc46b212f25ae93614fa2a5867a8f"/>
@@ -89,6 +89,7 @@
 <a href="libpict_8h.html#a4d84e1a866c4b0808d10dd1b7125a639aed5e87ec2995fad054c0bdd95d166ecd"/>
 <a href="libpict_8h.html#a59dbc488048274abefa7570a76389782"/>
 <a href="libpict_8h.html#a5b0a3f02a682c7f39e1e1611d200b27e"/>
+<a href="libpict_8h.html#a70db0e63919cb9990b331a2370b3f2dd"/>
 <a href="libpict_8h.html#a73a093b46856feb5d3461234be974cac"/>
 <a href="libpict_8h.html#a74f5a485857253fdc89dc8c434c3c7a9"/>
 <a href="libpict_8h.html#a7dd626eb23a1d69947553c2d2166c8a3"/>
